# Weekly_Pulse_Grow-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest-out.txt  railway.toml
.cursor/: mcp.json.example
.github/workflows/: ci.yml  weekly-pulse.yml
Docs/: ProblemStatement.md  architecture.md  decision.md  github-actions.md  mcp-server-integration.md  phase-wise-implementationplan.md  public-deployment.md  review-export-formats.md
config/: product.yaml  themes.yaml
data/: README.md
data/raw/: APP_STORE_EXPORT_NEEDED.md  README.md
frontend/app/: layout.tsx  page.tsx
frontend/components/: ErrorPanel.tsx  Header.tsx  PulseView.tsx  StatCard.tsx
frontend/lib/: api.ts  format.ts  types.ts
phases/: README.md
phases/phase-0/: DELIVERABLES.md  README.md
phases/phase-1/: DELIVERABLES.md  README.md
phases/phase-2/: DELIVERABLES.md  README.md
phases/phase-3/: DELIVERABLES.md  README.md
phases/phase-4/: DELIVERABLES.md  (+1 more)
prompts/: draft-email.md  groq-theme-classify.md  groq-theme-summary.md  publish-doc.md  weekly-pulse-agent.md
scripts/: build_test_fixtures.py  fetch_public_reviews.py  phase0_run.py  phase6_signoff.py  pre_phase1_check.py  py  run_ingest.sh  run_pipeline_public.sh  run_pulse.sh  run_themes.sh  run_weekly_full.sh  sync_public_api.py  validate_raw_exports.py
src/: __init__.py  env_loader.py  paths.py
tests/: test_api.py  test_api_sync.py  test_formatting.py  test_phase1_ingest.py  test_phase2_themes.py  test_phase3_pulse.py  test_phase4_publish.py  test_phase5_draft.py  test_phase6_signoff.py
(+88 files in other folders)
